# diffapp

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prompt_spec.md  spec.md  todo.md  tsconfig.json  vitest.config.ts
.github/workflows/: flutter-ci.yml
diffapp/: .flutter-plugins  README.md  analysis_options.yaml  pubspec.yaml
diffapp/.dart_tool/: package_config.json  package_graph.json
diffapp/android/: build.gradle.kts  settings.gradle.kts
diffapp/android/app/: build.gradle.kts
diffapp/android/app/src/main/: AndroidManifest.xml
diffapp/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
diffapp/android/app/src/main/cpp/tests/: nms_dedup_gtest.cpp  nms_dedup_test.cpp  orb_sift_matching_gtest.cpp  orb_sift_matching_test.cpp  ssim_numeric_gtest.cpp  ssim_numeric_test.cpp
diffapp/android/app/src/main/cpp/tests/assets/: left.pgm  right.pgm
diffapp/android/app/src/main/kotlin/dev/minamidenshiimanaka/diffapp/: MainActivity.kt
diffapp/android/app/src/main/res/drawable/: launch_background.xml
diffapp/android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
diffapp/assets/models/: placeholder.tflite
diffapp/assets/screenshots/: README.md
diffapp/docs/: detection_pipeline_plan.md  emulator_verification_log.md  known_issues_and_plan.md  perf_budget.md  perf_low_memory_plan.md  ux_kids_test_plan.md
diffapp/fvm/: fvm_config.json
diffapp/ios/: Podfile
diffapp/ios/Runner/: Info.plist
diffapp/ios/Runner.xcodeproj/: project.pbxproj
diffapp/ios/opencv/: CMakeLists.txt  README.md  build_ios.sh
diffapp/lib/: cnn_detection.dart  features.dart  image_metadata.dart  image_pipeline.dart  logger.dart  main.dart  permissions.dart  sdk_compat.dart  settings.dart  sound_effects.dart  tflite_cnn_native.dart
diffapp/lib/ffi/: bindings.dart  image_ops.dart
diffapp/lib/screens/: compare_page.dart  image_select_page.dart  licenses_page.dart  privacy_policy_page.dart  rect_select_page.dart  result_page.dart  settings_page.dart
diffapp/lib/widgets/: cropped_image.dart
diffapp/linux/: CMakeLists.txt
diffapp/linux/runner/: my_application.cc
diffapp/macos/Runner.xcodeproj/: project.pbxproj
diffapp/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
diffapp/macos/Runner/Configs/: AppInfo.xcconfig
diffapp/native/: README.md
diffapp/test/: android_splash_config_test.dart  annotated_region_detection_test.dart  app_icons_presence_test.dart  apply_same_rect_test.dart  auto_contrast_test.dart  auto_resize_oversized_input_test.dart  binarize_connected_components_test.dart  ci_analyze_build_jobs_test.dart  ci_release_job_test.dart  cnn_detection_test.dart  cnn_detector_precision_threshold_test.dart  color_diff_robust_test.dart  compare_highlight_semantics_test.dart  compare_highlight_test.dart  compare_page_heading_and_button_style_test.dart  compare_page_test.dart  compare_passes_settings_to_detector_test.dart  crop_image_rect_painter_test.dart  crop_preview_after_apply_test.dart  crop_preview_extreme_aspect_test.dart  crop_preview_translation_scaled_test.dart  detection_integration_test.dart  detection_min_area_ratio_test.dart  detection_real_images_test.dart  detection_spine_like_test.dart  exif_orientation_size_test.dart  features_harris_brief_test.dart  ffi_cnn_detector_fallback_test.dart  ffi_cnn_detector_native_test.dart  ffi_default_native_stub_test.dart  ffi_default_native_unavailable_call_test.dart  ffi_grayscale_fallback_test.dart  ffi_image_ops_fallback_test.dart  ffi_image_ops_prefer_native_test.dart  full_flow_test.dart  home_error_test.dart  home_page_test.dart  homography_ransac_test.dart  image_input_test.dart  image_pipeline_test.dart  (+35 more)
diffapp/tool/: print_detection.dart
diffapp/web/: index.html  manifest.json
diffapp/windows/: CMakeLists.txt
diffapp/windows/runner/: Runner.rc  main.cpp
scripts/: logcat_diffapp.sh  reboot_android.sh  run_android.sh
src/: TopScreen.test.tsx  TopScreen.tsx  android_emulator_reboot_script.test.ts  android_fvm_preferred_scripts.test.ts  android_logcat_script.test.ts  android_run_script.test.ts  ci_analyze_build_jobs.test.ts  ci_native_gtest_emulator_job.test.ts  ci_native_gtest_job.test.ts  ci_opencv_cache_job.test.ts  ci_release_job.test.ts  color_diff_saturation_weight.test.ts  compare_alignment_iteration.test.ts  compare_detector_override_fast_path.test.ts  compare_similarity_alignment.test.ts  detect_crop_selection_applied.test.ts  detection_alignment_precision.test.ts  detection_pipeline_plan_doc.test.ts  detection_precision_levels_extended.test.ts  detection_refine_dedup.test.ts  detection_scoring_prefers_peaks.test.ts  detection_tile_fallback_doc.test.ts  diff_blur_preprocess.test.ts  diff_edge_suppression_present.test.ts  imageInput.test.ts  imageInput.ts  min_area_percent_default.test.ts  native_algorithms_content.test.ts  native_cpp_tests_presence.test.ts  native_gtest_build_config.test.ts  native_gtest_numeric_content.test.ts  native_gtest_opencv_assets_content.test.ts  native_gtest_presence.test.ts  opencv_android_jnilibs_test.ts  opencv_ios_build_config.test.ts  opencv_ios_cmake_link_config.test.ts  opencv_ios_pbxproj_test.ts  opencv_ndk_config.test.ts  perf_budget_doc.test.ts  perf_low_memory_plan.test.ts  (+7 more)
